# QAbot

./: .env.example  .gitignore  AGENT.md  Agent.md  LICENSE  Makefile  README.md  THREAT_MODEL.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  qa-gate.yml
qabot/: __main__.py  notify.py  state.py
qabot/agent/: core.py  exports.py  llm.py  prompts.py  reconcile.py  report.py  smoke.py
qabot/tools/: analyzer.py  api.py  fs.py  git_blame.py  github.py  runner.py
reports/: qabot_state.json
scripts/: export_context.py
tests/: test_agent.py  test_exports.py  test_git_blame.py  test_github.py  test_llm.py  test_main.py  test_notify.py  test_reconcile.py  test_report.py  test_smoke.py  test_state.py  test_tools.py
wiki/: README.md  _estado-de-integracao.md  _glossario.md  _indice.md  _schema.md
wiki/componentes/: agent-core.md  agent-prompts.md  agent-report.md  tools-analyzer.md  tools-api.md  tools-fs.md  tools-runner.md
wiki/decisoes/: escopo-do-agente.md  json-mode-e-parser-robusto.md  react-unico-vs-multiagente.md  relatorio-deterministico.md
wiki/padroes/: convencoes-de-teste.md  harness-handoff.md  workflow-git.md
wiki/projetos/: layer-0-wiring.md  layer-1-5-deteccao-semantica.md  layer-1-test-agent-ci.md  layer-2-github-integration.md  layer-3-state-persistence.md
wiki/raw/: issue10-run-alertavida.txt  issue9-e2e-run.txt  jsonfix-run-calc.txt  layer0-pytest-run.txt  layer0-run-alertavida.txt  pr23-quality-cleanup-checks.txt
