[project]
name = "qabot"
version = "0.1.0"
description = "AI agent for automated QA on Python projects"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
qabot = "qabot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["qabot", ".venv", "__pycache__"]
addopts = "--cov=qabot --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*"]

